# Mattys_project

./: main.py  pyproject.toml
modules/: data.py  plot.py
scripts/: binning_opt.py  run.py
