[project]
name = "mattys-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg>=1.4",
    "h5>=0.12.1",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
